# supermq

./: .env  .gitignore  .golangci.yml  CNAME  CONTRIBUTING.md  Gopkg.toml  Jenkinsfile  MAINTAINERS  MainFluxServer.njsproj  Makefile  README.md  Taskfile.yml  api.go  auth.pb.go  auth.proto  auth_grpc.pb.go  boilerplate.txt  client.csr  client.key  config.toml  demo.sh  docker-compose.yml  env.go  go.mod  go.sum  health.go  idp.go  internal.pb.go  internal.proto  jwks_review.md  main.go  message.pb.go  message.proto  mkdocs.yml  mockery.yaml  notification_review.md  package.json  pubsub.go  repo.go  review.md  (+4 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  swagger-ui-template.html
.semaphore/: semaphore.yml
activitylog/: activity.go  activity_test.go  service.go  service_test.go
api/: README.md  auth.yml  bootstrap.yml  certs.yml  consumers-notifiers.yml  (+6 more)
apidocs/openapi/supermq-rust-sdk/: Cargo.toml
apidocs/openapi/supermq-rust-sdk/examples/: complete_workflow.rs
apidocs/openapi/supermq-rust-sdk/src/: auth.rs  bootstrap.rs  certs.rs  channels.rs  client.rs  config.rs  domains.rs  error.rs  groups.rs  journal.rs  lib.rs  provision.rs  things.rs  types.rs  users.rs
pkg/sdk/rust/: Cargo.toml
pkg/sdk/rust/src/: main.rs
pkg/sdk/rust/src/certs/: certs.rs
pkg/sdk/rust/src/channels/: channels.rs
pkg/sdk/rust/src/clients/: clients.rs
pkg/sdk/rust/src/domains/: domains.rs
pkg/sdk/rust/src/groups/: groups.rs
pkg/sdk/rust/src/journal/: journal.rs
pkg/sdk/rust/src/twins/: mod.rs  twins.rs
pkg/sdk/rust/src/users/: users.rs
(+8180 files in other folders)
