[package]
name = "supermq-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "SuperMQ Rust SDK - Complete client library"
license = "Apache-2.0"
homepage = "https://github.com/absmach/supermq"
repository = "https://github.com/absmach/supermq-sdk-rust"
keywords = ["supermq", "iot", "messaging", "sdk"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
