[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_demo"
path = "src/certs/certs.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
